<resources>
	<string name="policy_url" translatable="false">https://waterreminder.blogspot.com/2019/03/privacy-policy.html</string>
	<string name="terms_url" translatable="false">https://waterreminder.blogspot.com/2019/03/terms-of-use.html</string>
	
    <string name="app_name">Water Drink Tracker Reminder</string>
	<string name="what_is_your_weight">What is your weight?</string>
	<string name="how_active_are_you">How much time do you spend on sports every day?</string>
	<string name="hours_a_day">hours a day</string>
	<string name="btn_next">Next</string>
	<string name="label_kilogram">kilogram</string>
    <string name="ml">ml</string>
    <string name="of">of</string>
	<string name="what_is_your_gender">What is your gender?</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="save_button">Save</string>
	
	<string name="warning_tittle">Warning!</string>
	<string name="body_warning_one">
		The application is a recommendation.
		The amount of water is calculated based on the average data.
		For more accurate information contact the doctor.
	</string>
	<string name="body_warning_two">
		During the work of the application, there may be periods of increased battery consumption.
		However, there is no cause for concern, such periods are rare and usually short
	</string>
	<string name="loading">Loading</string>

	<string name="gdpr_tittle">Personalize your ad experience!</string>
    <string name="gdpr_body">
	    App personalize your advertising experience using AdMob.\n\n
        AdMob and its partners may collect and process personal data such as device identifiers, location data,
        demographic and interest data to provide other advertising experience tailored to you.\n\n
        By agreeing, you confirm that you are over the age of 16 and would like a personalized ad experience.\n\n
    </string>
    <string name="gdpr_accept">Accept</string>
    <string name="gdpr_decline">Decline</string>
	
	<string name="congratulations_label">Congratulations!\nYou reached a daily water goal!</string>
    <string name="ok_label">OK</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="terms_of_use">Terms Of Use</string>
	<string name="permissions_required">You must grant the application the necessary permissions!</string>
	<string name="nav_item_main">Main</string>
	<string name="nav_item_settings">Settings</string>
	
	<string name="first_show_label">
		Based on your gender, weight and time of sports, we calculated the required amount of water.
		Remember that the application is a recommendation.
		For more information, please contact your doctor.
	</string>
	<string name="label_interval">How often should we show reminders?</string>
	
	<string name="min">min</string>
	<string name="hour">hour</string>
	<string name="kg">kg</string>
	
	<string name="interval_label">Interval</string>
	<string name="settings_label">Settings</string>
	<string name="notifications_label">Notifications</string>
	<string name="units_label">Units</string>
	<string name="metric_system_label">Metric System</string>
	<string name="weight_label">Weight</string>
	<string name="activity_label">Sport activity</string>
	<string name="capacity_of_glass_label">Capacity of glass</string>
	
	<string name="time_to_drink">It\'s time to drink water</string>
	<string name="drink_action">Drink</string>
	<string name="later_action">Later</string>
	
	<string name="small_glass">Small glass</string>
	<string name="_100_ml">100 ml</string>
	<string name="cup">Cup</string>
	<string name="_250_ml">250 ml</string>
	<string name="glass">Glass</string>
	<string name="_300_ml">300 ml</string>
	<string name="small_bottle">Small Bottle</string>
	<string name="_500_ml">500 ml</string>
	<string name="bottle">Bottle</string>
	<string name="_1000_ml">1000 ml</string>
	<string name="progress_label">Progress</string>
	
	
</resources>
