<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	>
	
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:adjustViewBounds="true"
		android:src="@drawable/background"
		app:layout_constraintTop_toTopOf="parent"
		/>
	
	<TextView
		android:id="@+id/labelWarning"
		style="@style/IntroLabel"
		android:layout_marginTop="20dp"
		android:gravity="center"
		android:text="@string/warning_tittle"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>
	
	<TextView
		android:id="@+id/bodyWarningOne"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="10dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:text="@string/body_warning_one"
		android:textColor="@color/white"
		android:textSize="18sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/labelWarning"
		/>
	
	<TextView
		android:id="@+id/bodyWarningTwo"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="10dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="10dp"
		android:text="@string/body_warning_two"
		android:textColor="@color/white"
		android:textSize="18sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/bodyWarningOne"
		/>
	
	<com.google.android.material.button.MaterialButton
		android:id="@+id/btnNext"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="70dp"
		android:text="@string/btn_next"
		android:textAllCaps="false"
		android:textSize="18sp"
		app:backgroundTint="@color/red"
		app:cornerRadius="100dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		/>
	
	


</androidx.constraintlayout.widget.ConstraintLayout>
